@@ -31,6 +31,10 @@ Changes
 Fixes
 =====
 
+ - Fixed issue which lead to an object's column policy being changed to 
+   the default DYNAMIC when adding a nested object column using the 
+   `alter table` statement.
+
  - Fix: `sys.snapshot` queries hung instead of throwing an error if something
    went wrong.
 
